--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="TaskMaster Pro - 전문가용 업무 관리 도구">
     <title>TaskMaster Pro</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
     <div class="app">
@@ -42,6 +43,14 @@
                     <span class="icon-sun">☀️</span>
                     <span class="icon-moon">🌙</span>
                 </button>
+                <div class="auth-section" id="authSection">
+                    <button class="btn btn-primary btn-sm" id="loginBtn">로그인</button>
+                </div>
+                <div class="user-section" id="userSection" style="display: none;">
+                    <span class="user-email" id="userEmail"></span>
+                    <button class="btn btn-secondary btn-sm" id="syncBtn" title="클라우드 동기화">🔄</button>
+                    <button class="btn btn-secondary btn-sm" id="logoutBtn">로그아웃</button>
+                </div>
             </div>
         </header>
 
@@ -498,6 +507,34 @@
                     <button type="button" class="btn btn-secondary" id="cancelDeleteBtn">취소</button>
                     <button type="button" class="btn btn-danger" id="confirmDeleteBtn">삭제</button>
                 </div>
+            </div>
+        </div>
+
+        <!-- Auth Modal -->
+        <div class="modal-overlay" id="authModal">
+            <div class="modal modal-small">
+                <div class="modal-header">
+                    <h3 id="authModalTitle">로그인</h3>
+                    <button class="modal-close" id="authModalClose">×</button>
+                </div>
+                <form class="modal-form" id="authForm">
+                    <div class="form-group">
+                        <label for="authEmail">이메일</label>
+                        <input type="email" id="authEmail" placeholder="이메일을 입력하세요" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="authPassword">비밀번호</label>
+                        <input type="password" id="authPassword" placeholder="비밀번호 (최소 6자)" required minlength="6">
+                    </div>
+                    <div class="auth-error" id="authError" style="display: none; color: #ef4444; margin-bottom: 1rem; font-size: 0.875rem;"></div>
+                    <div class="form-actions">
+                        <button type="submit" class="btn btn-primary" id="authSubmitBtn">로그인</button>
+                    </div>
+                    <div class="auth-switch" style="text-align: center; margin-top: 1rem;">
+                        <span id="authSwitchText">계정이 없으신가요?</span>
+                        <button type="button" class="btn-link" id="authSwitchBtn">회원가입</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
